--- a/README.rdoc
+++ b/README.rdoc
@@ -1,6 +1,7 @@
 == README
 
-This README would normally document whatever steps are necessary to get the
+Web site based on talent contest
+http://talentedorterrible.com
 application up and running.
 
 Things you may want to cover:
